--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@ body, html {
   .container {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-end;
     height: 100vh;
   }
   
@@ -22,13 +22,39 @@ body, html {
     margin: 20px;
     padding: 20px;
     background-color: #F48C06; 
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+   .side-left .box:nth-child(2) {
+    justify-content: flex-end;
+}
+    .side-left .box:nth-child(3) {
+    justify-content: center; 
+}
 
-    .box .square { 
+    .side-left .box:nth-child(3) .square:nth-child(1) {
+    width: 78px;
+    height: 120px; 
+}
+
+    .side-left .box:nth-child(3) .square:nth-child(2) {
+    width: 78px;
+    height: 78px;
+}
+
+    .side-left .box:nth-child(3) .square:nth-child(3) {
+    width: 78px;
+    height: 120px; 
+}
+
+    .square { 
         width: 78px;
         height: 78px;
         background-color:#9D0208;
         margin: 5px;
-
-    }
-  }
+    } 
+   
   
+    
