--- a/styles/index.css
+++ b/styles/index.css
@@ -29,6 +29,8 @@ body, html {
 }
    .side-left .box:nth-child(2) {
     justify-content: flex-end;
+    align-items: center;
+    
 }
     .side-left .box:nth-child(3) {
     justify-content: center; 
@@ -37,18 +39,37 @@ body, html {
     .side-left .box:nth-child(3) .square:nth-child(1) {
     width: 78px;
     height: 120px; 
+    margin-right: 30px;
 }
 
     .side-left .box:nth-child(3) .square:nth-child(2) {
     width: 78px;
-    height: 78px;
+    height: 64px;
+    margin-top: 30px;
+    align-self: center;
+    
 }
 
     .side-left .box:nth-child(3) .square:nth-child(3) {
     width: 78px;
-    height: 120px; 
+    min-height: 120px; 
+    margin-left: 30px;
 }
-
+    .side-right .box:nth-child(1) {
+        display: flex;
+        align-items: stretch;
+        justify-content: center;
+        flex-direction: row; 
+    
+        
+        
+    }
+    .side-right .box:nth-child(1) .rectangle {
+        width: 78px;
+        min-height: 120px;
+        background-color: #9D0208;
+       align-items: stretch;
+    }
     .square { 
         width: 78px;
         height: 78px;
